[bugfix] Fix the vertical alignment inside AppButton
* Problem
  * Icon inside AppButton is a little bit higher than the center of AppButton
* Fix
  * Replace text-align & line-height trick to flex

--- a/src/style/home/AppButton.module.scss
+++ b/src/style/home/AppButton.module.scss
@@ -3,13 +3,15 @@
 .appButton {
     cursor: pointer;
     transition: transform 0.1s;
-    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 
     width: 4rem;
     height: 4rem;
     margin-bottom: 1rem;
     border-radius: 1rem;
-    line-height: 4rem;
     font-size: 2.5rem;
     border: 2px solid Common.$white;
 
